--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{% block title %}{% endblock %}</title>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -45,7 +49,7 @@
 
   </style>
 </head>
-
+{% include 'navbar.html' %}
 <body>
 
     <div class="mt-5 pt-4">
@@ -67,8 +71,14 @@
     {% block extra_body %}
     {% endblock %}
 
-    
+    <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; AF 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block extra_scripts %}
     {% endblock extra_scripts %}
 </body>
