--- a/templates/home.html
+++ b/templates/home.html
@@ -1,124 +1,118 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extrahead %}
+<style>
+body {
+  margin-top: 20px;
+}
+
+.card {
+  border: none;
+}
+
+.card-img {
+  border-radius: 0;
+}
+
+.vgr-cards .card {
+  display: -webkit-box;
+  display: flex;
+  flex-flow: wrap;
+  -webkit-box-flex: 100%;
+          flex: 100%;
+  margin-bottom: 40px;
+}
+.vgr-cards .card:nth-child(even) .card-img-body {
+  -webkit-box-ordinal-group: 3;
+          order: 2;
+}
+.vgr-cards .card:nth-child(even) .card-body {
+  padding-left: 0;
+  padding-right: 1.25rem;
+}
+@media (max-width: 576px) {
+  .vgr-cards .card {
+    display: block;
+  }
+}
+.vgr-cards .card-img-body {
+  -webkit-box-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  position: relative;
+}
+@media (max-width: 576px) {
+  .vgr-cards .card-img-body {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+  }
+}
+.vgr-cards .card-img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  margin-left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+@media (max-width: 1140px) {
+  .vgr-cards .card-img {
+    margin: 0;
+    -webkit-transform: none;
+            transform: none;
+    width: 100%;
+    height: auto;
+  }
+}
+.vgr-cards .card-body {
+  -webkit-box-flex: 2;
+          flex: 2;
+  padding: 0 0 0 1.25rem;
+}
+@media (max-width: 576px) {
+  .vgr-cards .card-body {
+    padding: 0;
+  }
+}
+
+</style>
+{% endblock extrahead %}
+
+{% block title %}
+SP Home
+{% endblock title %}
 
 {% block content %}
-<div onload="init();">
     
-<ul class="navbar-nav nav-flex-icons">
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'core:add' %}">
-              <span class="clearfix d-none d-sm-inline-block">Add employees</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'core:card' %}">
-              <span class="clearfix d-none d-sm-inline-block">Create Keycards</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'core:monitor' %}">
-              <span class="clearfix d-none d-sm-inline-block">Scan Keycards</span>
-            </a>
-          </li>
-          {% if request.user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'core:eventlist' %}">
-              <span class="clearfix d-none d-sm-inline-block">Recent events</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'core:manual-event' %}">
-              <span class="clearfix d-none d-sm-inline-block">Create event</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
-              <span class="clearfix d-none d-sm-inline-block"> Logout </span>
-            </a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'account_login' %}">
-              <span class="clearfix d-none d-sm-inline-block"> Login </span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
-              <span class="clearfix d-none d-sm-inline-block"> Signup </span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-<h1>Take a snapshot of the current video stream</h1>
-   Click on the Start WebCam button.
-     <p>
-    <button onclick="startWebcam();">Start WebCam</button>
-    <button onclick="stopWebcam();">Stop WebCam</button> 
-       <button onclick="snapshot();">Take Snapshot</button> 
-    </p>
-    <video onclick="snapshot(this);" width=400 height=400 id="video" controls autoplay></video>
-  <p>
+<div class="card-group vgr-cards">
+<div class="card">
+<div class="card-img-body">
+<i class="fas fa-id-card fa-10x"></i>
+</div>
+<div class="card-body">
+<h4 class="card-title">Create your keycards</h4>
+<p class="card-text">You just need to register your employees and you can create and download key cards with qr codes for a safe and fast login process</p>
+</div>
+</div>
+<div class="card">
+<div class="card-img-body">
+<i class="fas fa-qrcode fa-10x"></i></div>
+<div class="card-body">
+<h4 class="card-title">Scan the code</h4>
+<p class="card-text">Just scan the code on your computer or phone and we will keep track of everything</p>
+</div>
+</div>
+<div class="card">
+<div class="card-img-body">
+<i class="fas fa-business-time fa-10x"></i>
+</div>
+<div class="card-body">
+<h4 class="card-title">Get the timesheet</h4>
+<p class="card-text"> With one click get the time worked for each employee, between two dates. Acurate, fast and concise</p>
 
-        Screenshots : <p>
-      <canvas  id="myCanvas" width="400" height="350"></canvas>  
-  </div><script>
-      //--------------------
-      // GET USER MEDIA CODE
-      //--------------------
-          navigator.getUserMedia = ( navigator.getUserMedia ||
-                             navigator.webkitGetUserMedia ||
-                             navigator.mozGetUserMedia ||
-                             navigator.msGetUserMedia);
-
-      var video;
-      var webcamStream;
-
-      function startWebcam() {
-        if (navigator.getUserMedia) {
-           navigator.getUserMedia (
-
-              // constraints
-              {
-                 video: true,
-                 audio: false
-              },
-
-              // successCallback
-              function(localMediaStream) {
-                  video = document.querySelector('video');
-                 video.src = window.URL.createObjectURL(localMediaStream);
-                 webcamStream = localMediaStream;
-              },
-
-              // errorCallback
-              function(err) {
-                 console.log("The following error occured: " + err);
-              }
-           );
-        } else {
-           console.log("getUserMedia not supported");
-        }  
-      }
-
-      function stopWebcam() {
-          webcamStream.stop();
-      }
-      //---------------------
-      // TAKE A SNAPSHOT CODE
-      //---------------------
-      var canvas, ctx;
-
-      function init() {
-        // Get the canvas and obtain a context for
-        // drawing in it
-        canvas = document.getElementById("myCanvas");
-        ctx = canvas.getContext('2d');
-      }
-
-      function snapshot() {
-         // Draws current image from the video element into the canvas
-        //ctx.drawImage(video, 0,0, canvas.width, canvas.height);
-        console.log(typeof(video))
-      }
-
-  </script>
+<a href="{% if request.user.is_authenticated %}{% url 'core:eventlist' %}{% else %}{% url 'account_login' %}{% endif %}" class="btn btn-outline-primary">Go</a>
+</div>
+</div>
+</div>
 {% endblock content %}
